# fractal_quadtree

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md  iosevich.md  presentation.md  rustfmt.toml  temp.py
src/: app.rs  camera.rs  fixed.rs  fractal.rs  main.rs  pool.rs  sample.rs  tree.rs  typestate_sample.rs  util.rs
src/complex/: cameras.rs  domain.rs  fixed.rs  mod.rs  square.rs  window.rs
