[package]
name = "fractal_quadtree"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic = "0.6.1"
bumpalo = "3.20.2"
# version determined by atomic
bytemuck = "*"
eframe = { version = "0.32.3" }
# version determined by eframe
egui = { version = "*", features = ["bytemuck"] }
mimalloc = "0.1.48"
rand = "0.9.2"
rayon = "1.11.0"

[features]
# used for eg not inlining function so they show up when profiling
# #[cfg_attr(feature = "profiling", inline(never))]
profiling = []

[profile.release]

[profile.dev]
opt-level = 3

[profile.profiling]
# samply record cargo run --profile profiling --features profiling
# cargo instruments -t "CPU Counters" --profile profiling --features profiling
# cargo instruments -t "CPU Profiler" --profile profiling --features profiling
# cargo instruments -t time --profile profiling --features profiling
# data faults? custom?
inherits = "release"
debug = true
split-debuginfo = "packed"
