[package]
authors = ["Josie Elliston"]
name = "fractal_quadtree"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic = "0.6.1"
# version determined by atomic
bytemuck = "*"
eframe = "0.34.1"
# version determined by eframe
egui = { version = "*", features = ["bytemuck"] }
mimalloc = "0.1.50"
rand = "0.10.1"
rayon = "1.12.0"

[features]
# used for eg not inlining function so they show up when profiling
# #[cfg_attr(feature = "profiling", inline(never))]
profiling = []

[profile.release]

[profile.dev]
opt-level = 3

[profile.profiling]
# samply record cargo run --profile profiling --features profiling
# cargo instruments -t "CPU Counters" --profile profiling --features profiling
# cargo instruments -t "CPU Profiler" --profile profiling --features profiling
# cargo instruments -t time --profile profiling --features profiling
# data faults? custom?
inherits = "release"
debug = true
split-debuginfo = "packed"
